--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: eric
 version: 1.0.0-alpha.1
 description: Read, write and modify a pubspec.yaml including retention and modifications of comments and out of spec content.
+repository: https://github.com/onepub-dev/eric
 environment: 
   sdk: '>=3.0.0 <4.0.0'
 dependencies: 
