--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: eric
+name: pubspec_manager
 version: 1.0.0-alpha.5
-description: Read, write and modify a pubspec.yaml including retention and modifications of comments and out of spec content.
-repository: https://github.com/onepub-dev/eric
+description: Read, write and modify a pubspec.yaml with a type safe API including retention and modifications of comments and out of spec content.
+repository: https://github.com/onepub-dev/pubspec_manager
 environment: 
   sdk: '>=3.0.0 <4.0.0'
 dependencies: 
