--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/onepub-dev/pubspec_manager
 environment: 
   sdk: '>=3.0.0 <4.0.0'
 dependencies: 
-  fsm2: ^3.1.0-alpha.1
+  fsm2: ^3.0.0
   meta: ^1.9.1
   path: ^1.8.3
   pub_semver: ^2.1.4
