--- a/example.yaml
+++ b/example.yaml
@@ -1,23 +1,41 @@
-name: new eric 
-version: 1.0.0-alpha.2 
-description: An example 
-environment:  
-  sdk: '>3.0.0 <=4.0.0' 
-# This is the doco 
-documentation: https://onepub.dev 
-# The home page 
-# more 
-homepage: https://onepub.dev/home 
-# Log bugs here 
-issue_tracker: https://onepub.dev/Issues 
-# The code is here 
-repository: https://onepub.dev/Issues 
-dependencies:  
-  dcli:  
-    hosted: https://onepub.dev 
-  dcli_core: 1.0.0 
-dev_dependencies:  
-  # hi there 
-  # ho there 
-  test: 1.0.0 
-  test_it: 1.0.0 
+name: new eric
+version: 1.0.0-alpha.2
+description: An example
+environment:
+  sdk: >3.0.0 <=4.0.0
+  flutter: 1.0.0
+# Its a flutter app
+environment:
+# The home page
+# more
+homepage: https://onepub.dev/home
+# Publish to a private repo.
+# more
+publish_to: https://onepub.dev/xxxxyyy
+# The code is here
+repository: https://onepub.dev/Issues
+# Log bugs here
+issue_tracker: https://onepub.dev/Issues
+# This is the doco
+documentation: https://onepub.dev
+dependencies:
+  dcli:
+    hosted: https://onepub.dev
+  dcli_core: 1.0.0
+dev_dependencies:
+  test: 1.0.0
+  test_it: 1.0.0
+dependency_overrides:
+  dcli:
+    path: ../../some/path
+platforms:
+  ios:
+  android:
+  web:
+executables:
+executables:
+  myapp:
+# 
+executables:
+executables:
+  installer: install
