--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: pubspec_manager
-version: 1.0.0-alpha.17
+version: 1.0.0-beta.1
 description: Read, write and modify a pubspec.yaml with a type safe API including retention and modifications of comments and out of spec content.
 repository: https://github.com/onepub-dev/pubspec_manager
 environment:
   sdk: '>=3.0.0 <4.0.0'
 dependencies:
-  fsm2: ^3.0.0
   meta: ^1.9.1
   path: ^1.8.3
   pub_semver: ^2.1.4
