Widen `strings` dependency range to include `4.0.0` release (no breaking changes).

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ dependencies:
   meta: ^1.9.1
   path: ^1.8.3
   pub_semver: ^2.1.4
-  strings: ^3.0.0
+  strings: '>=3.0.0 <5.0.0'
 dev_dependencies:
   lint_hard: ^4.0.0
   test: ^1.24.6
