upgraded to lint_hard 6.0 and fixed lints.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,8 @@
 
+analyzer:
+  errors:
+    avoid_returning_this: ignore
+    one_member_abstracts: ignore
 include: package:lint_hard/all.yaml
 
 linter:
